# MediVoice

./: .gitignore  Makefile  README.md  fly.toml  pyproject.toml
.github/workflows/: ci.yml
apps/server/: .env.example  Dockerfile  config.py  grpc_server.py  main.py  pcc-deploy.toml  pyproject.toml
apps/server/api/: connect.py  livekit.py  livekit_utils.py
apps/server/bot/: pipeline.py
apps/server/bot/agents/: orchestrator.py  registry.py
apps/server/bot/observability/: conversation_logger.py  langfuse_setup.py  langfuse_tracker.py  metrics.py  metrics_bridge.py  otel_setup.py  redact.py  retry.py
apps/server/bot/prompts/: billing.md  booking.md  faq.md  triage.md
apps/server/bot/tools/: appointments.py  billing.py  patient_lookup.py  rag_search.py  sql_query.py
apps/server/bot/transports/: livekit_sip.py
apps/server/db/: pool.py  queries.py  schema.sql
apps/server/db/migrations/: 001_initial.sql
apps/server/ingest/: bm25_index.py  chunker.py  load_clinic_kb.py
apps/server/proto/: medivoice.proto
apps/server/tests/: test_pipeline.py  test_queries.py  test_rag_search.py  test_sql_query.py
apps/web/: .env.local.example  index.html  next.config.ts  package.json
data/clinic_kb/doctors/: dr-kim.md  dr-lee.md  dr-nguyen.md  dr-patel.md  dr-singh.md  team-overview.md
data/clinic_kb/faq/: appointment-booking.md  braces-vs-invisalign.md  crown-vs-filling.md  dental-anxiety.md  first-visit.md  frequency-visits.md  insurance-check.md  kids-first-visit.md  knocked-out-tooth.md  new-patient-forms.md  (+5 more)
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  DEPLOY.md  EVAL_REPORT.md  LATENCY_BUDGET.md  LLM_TOOL_AGENT_FLOW.md  PII.md
eval/datasets/: booking.jsonl  full.jsonl  handoff.jsonl  phone.jsonl  rag.jsonl  text_to_sql.jsonl
eval/runners/: booking_eval.py  drift_detector.py  handoff_eval.py  judge.py  offline_eval.py  phone_eval.py  rag_eval.py  sql_eval.py
eval/scripts/: manual_baseline.md
infra/: README.md  docker-compose.yml  otel-collector.yaml  prometheus.yml
infra/postgres-init/: 01_schema.sql
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.yaml.example  service.yaml
scripts/: check_env.py  seed_db.py
(+35 files in other folders)
